# tableflow

./: pyproject.toml
tableflow/: cli.py  middleware.py  pyproject.toml
tableflow/commands/: filter.py  paginate.py
tableflow/core/: filtering.py  pagination.py  sorting.py
tableflow/tableflow/: __init__.py  cli.py  middleware.py
tableflow/tableflow/commands/: filter.py  paginate.py
