[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tableflow"
version = "1.0.0"
description = "Middleware engine for search/filter/pagination"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "swe-shree"}]
keywords = ["search", "filter", "pagination", "middleware", "table"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = ["setuptools"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/swe-shree/tableflow"
Repository = "https://github.com/swe-shree/tableflow.git"
Issues = "https://github.com/swe-shree/tableflow/issues"